[package]
name = "adblock-coffee"
version = "1.2.0"
edition = "2021"
authors = ["Bread White <breadrock1@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
adblock = "0.11.1"
env_logger = "0.11.8"
jni = "0.21.1"
lazy_static = "1.5.0"
log = "0.4.28"
once_cell = "1.21.3"
thiserror = "2.0.17"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.14"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"